# phantom-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: demo.tape
phantom/: __init__.py  _chat.py  _data.py  _paths.py  _providers.py  _registry.py  _result.py  _security.py  _session.py
phantom/cli/: __init__.py  __main__.py  app.py  commands.py  completions.py  config.py  display.py  onboarding.py
