[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom-ai"
version = "0.4.2"
description = "Sandboxed data analysis with LLMs, powered by DuckDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["duckdb>=0.9"]
authors = [
    { name = "James Wirth" }
]
keywords = ["llm", "duckdb", "sql", "sandbox", "data-analysis", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/James-Wirth/phantom-ai"
Repository = "https://github.com/James-Wirth/phantom-ai"
Issues = "https://github.com/James-Wirth/phantom-ai/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
google = ["google-genai>=1.0"]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
cli = ["rich>=13.0", "prompt-toolkit>=3.0"]
all = ["anthropic>=0.40", "openai>=1.0", "google-genai>=1.0", "pandas>=2.0", "polars>=0.20", "rich>=13.0", "prompt-toolkit>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "pandas>=2.0",
]

[project.scripts]
phantom = "phantom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["phantom"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
